# depthai-ros

./: .gitignore  rosdep.yaml
depthai_bridge/: package.xml
depthai_bridge/debian/: changelog  control  copyright  files  ros-foxy-depthai-bridge.substvars  rules
depthai_bridge/debian/.debhelper/ros-foxy-depthai-bridge/: dbgsym-build-ids
depthai_bridge/debian/.debhelper/ros-foxy-depthai-bridge/dbgsym-root/DEBIAN/: control  md5sums
depthai_bridge/debian/.debhelper/ros-foxy-depthai-bridge/dbgsym-root/usr/share/doc/: ros-foxy-depthai-bridge-dbgsym
depthai_bridge/debian/.debhelper/ros-galactic-depthai-bridge/: dbgsym-build-ids
depthai_bridge/debian/.debhelper/ros-galactic-depthai-bridge/dbgsym-root/DEBIAN/: control  md5sums
depthai_bridge/debian/.debhelper/ros-galactic-depthai-bridge/dbgsym-root/usr/share/doc/: ros-galactic-depthai-bridge-dbgsym
depthai_bridge/debian/ros-foxy-depthai-bridge/DEBIAN/: control  md5sums
depthai_bridge/debian/ros-foxy-depthai-bridge/opt/ros/foxy/share/ament_index/resource_index/package_run_dependencies/: depthai_bridge
depthai_bridge/debian/ros-foxy-depthai-bridge/opt/ros/foxy/share/depthai_bridge/: local_setup.sh
depthai_bridge/debian/ros-foxy-depthai-bridge/opt/ros/foxy/share/depthai_bridge/cmake/: ament_cmake_export_dependencies-extras.cmake  depthai_bridgeConfig.cmake  depthai_bridgeTargets.cmake  depthai_bridgeTargetsExport-none.cmake  depthai_bridgeTargetsExport.cmake
depthai_bridge/debian/ros-galactic-depthai-bridge/DEBIAN/: control  md5sums
depthai_bridge/debian/ros-galactic-depthai-bridge/opt/ros/galactic/share/ament_index/resource_index/package_run_dependencies/: depthai_bridge
depthai_bridge/debian/ros-galactic-depthai-bridge/opt/ros/galactic/share/depthai_bridge/: local_setup.sh
depthai_bridge/debian/ros-galactic-depthai-bridge/opt/ros/galactic/share/depthai_bridge/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  depthai_bridgeTargets-none.cmake  depthai_bridgeTargets.cmake  depthai_bridgeTargetsExport.cmake
(+55 files in other folders)
